added topics module
