# site-backend/app/routes/__init__.py
@@ -1,12 +1,14 @@
 from flask_restful import Api
-from app.controllers import ( IndexView, TagView, SearchView, AudioView, CommentView, UserView, AudioTagView, TopicView)
+from app.controllers import ( IndexView, TagView, TagSearchView, TopicSearchView, AudioView, CommentView, UserView, AudioTagView, TopicView)
 
 api = Api()
 
 # Index route
 api.add_resource(IndexView, '/')
-# Search route
-api.add_resource(SearchView, '/search_tag', endpoint='info')
+# Search_via_tag route
+api.add_resource(TagSearchView, '/search_tag', endpoint='bytag')
+# Search_via_topic route
+api.add_resource(TopicSearchView, '/search_topic', endpoint='bytopic')
 # New tags route
 api.add_resource(TagView, '/search/tags', endpoint='tag')
 # Audios route
@@ -18,4 +20,4 @@ api.add_resource(UserView, '/users', endpoint='users')
 # Audio-Tag route
 api.add_resource(AudioTagView, '/search', endpoint='search')
 #Topics route
-api.add_resource(TopicView, '/topics', endpoint='topic')
+api.add_resource(TopicView, '/search/topics', endpoint='topic')
